--- a/StiriDinRomania/src/main/AndroidManifest.xml
+++ b/StiriDinRomania/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:theme="@style/Theme.Styled">
         <meta-data
                 android:name="com.facebook.sdk.ApplicationId"
                 android:value="@string/app_id"/>
