--- a/StiriDinRomania/build.gradle
+++ b/StiriDinRomania/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile "com.android.support:support-v4:18.0.+"
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.squareup:otto:1.3.4'
+    compile 'com.jakewharton:butterknife:2.0.1'
     compile files('libs/async.jar')
 }
 
