--- a/StiriDinRomania/src/main/AndroidManifest.xml
+++ b/StiriDinRomania/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
             android:name=".StiriApp"
             android:allowBackup="true"
