--- a/StiriDinRomania/src/main/AndroidManifest.xml
+++ b/StiriDinRomania/src/main/AndroidManifest.xml
@@ -3,36 +3,55 @@
     package="com.vladstoick.stiridinromania"
     android:versionCode="1"
     android:versionName="1.0" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
-            android:name=".StiriApp"
-            android:allowBackup="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Styled">
+        android:name="com.vladstoick.stiridinromania.StiriApp"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Styled" >
         <meta-data
-                android:name="com.facebook.sdk.ApplicationId"
-                android:value="@string/app_id"/>
-        <activity android:name="com.facebook.LoginActivity"/>
-        <activity android:name=".LoginActivity">
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity android:name="com.facebook.LoginActivity" />
+        <activity android:name="com.vladstoick.stiridinromania.LoginActivity" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AllGroupsActivity"
-                  android:launchMode="singleTop"/>
-        <activity android:name=".NewsGroupActivity"
-                  android:parentActivityName=".AllGroupsActivity" >
+        <activity
+            android:name="com.vladstoick.stiridinromania.AllGroupsActivity"
+            android:launchMode="singleTop" />
+        <activity
+            android:name="com.vladstoick.stiridinromania.NewsGroupActivity"
+            android:parentActivityName=".AllGroupsActivity" >
             <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".AllGroupsActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".AllGroupsActivity" />
         </activity>
-
+        <activity
+            android:name="com.vladstoick.stiridinromania.NewsItemListActivity"
+            android:label="@string/title_newsitem_list" >
+        </activity>
+        <activity
+            android:name="com.vladstoick.stiridinromania.NewsItemDetailActivity"
+            android:label="@string/title_newsitem_detail"
+            android:parentActivityName=".NewsItemListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".NewsItemListActivity" />
+        </activity>
     </application>
 
 </manifest>
