--- a/StiriDinRomania/src/main/AndroidManifest.xml
+++ b/StiriDinRomania/src/main/AndroidManifest.xml
@@ -35,8 +35,8 @@
             android:launchMode="singleTop" />
         <activity
             android:name="com.vladstoick.stiridinromania.NewsGroupActivity"
-            android:parentActivityName=".AllGroupsActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:parentActivityName=".AllGroupsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".AllGroupsActivity" />
@@ -44,20 +44,32 @@
         <activity
             android:name="com.vladstoick.stiridinromania.NewsItemListActivity"
             android:label="@string/title_newsitem_list"
-            android:parentActivityName=".NewsGroupActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:parentActivityName=".NewsGroupActivity" >
             <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".NewsGroupActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".NewsGroupActivity" />
         </activity>
         <activity
             android:name="com.vladstoick.stiridinromania.NewsItemDetailActivity"
             android:label="@string/title_newsitem_detail"
-            android:parentActivityName=".NewsItemListActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:parentActivityName=".NewsItemListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".NewsItemListActivity" />
+        </activity>
+        <activity
+            android:name="com.vladstoick.stiridinromania.NewsGroupListActivity"
+            android:label="@string/title_newsgroup_list" >
+        </activity>
+        <activity
+            android:name="com.vladstoick.stiridinromania.NewsGroupDetailActivity"
+            android:label="@string/title_newsgroup_detail"
+            android:parentActivityName=".NewsGroupListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".NewsGroupListActivity" />
         </activity>
     </application>
 
