--- a/StiriDinRomania/src/main/AndroidManifest.xml
+++ b/StiriDinRomania/src/main/AndroidManifest.xml
@@ -31,16 +31,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.vladstoick.stiridinromania.AllGroupsActivity"
-            android:launchMode="singleTop" />
-        <activity
-            android:name="com.vladstoick.stiridinromania.NewsGroupActivity"
-            android:launchMode="singleTop"
-            android:parentActivityName=".AllGroupsActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".AllGroupsActivity" />
+                android:name="com.vladstoick.stiridinromania.NewsGroupListActivity"
+                android:label="@string/title_newsgroup_list"
+                android:launchMode="singleTop">
         </activity>
+        <activity
+                android:name="com.vladstoick.stiridinromania.NewsGroupDetailActivity"
+                android:label="@string/title_newsgroup_detail"
+                android:parentActivityName=".NewsGroupListActivity"
+                android:launchMode="singleTop">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".NewsGroupListActivity" />
+        </activity>
+
         <activity
             android:name="com.vladstoick.stiridinromania.NewsItemListActivity"
             android:label="@string/title_newsitem_list"
@@ -59,18 +63,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".NewsItemListActivity" />
         </activity>
-        <activity
-            android:name="com.vladstoick.stiridinromania.NewsGroupListActivity"
-            android:label="@string/title_newsgroup_list" >
-        </activity>
-        <activity
-            android:name="com.vladstoick.stiridinromania.NewsGroupDetailActivity"
-            android:label="@string/title_newsgroup_detail"
-            android:parentActivityName=".NewsGroupListActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".NewsGroupListActivity" />
-        </activity>
+
     </application>
 
 </manifest>
