--- a/StiriDinRomania/build.gradle
+++ b/StiriDinRomania/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.5.0'
+        classpath 'com.newrelic.agent.android:agent-gradle-plugin:2.426.0'
     }
 }
 repositories {
     mavenCentral()
 }
+apply plugin: 'android'
 apply plugin: 'android'
 
 dependencies {
@@ -17,7 +19,7 @@ dependencies {
     compile "com.android.support:support-v4:18.0.+"
     compile 'com.google.code.gson:gson:1.7.2'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-
+    compile 'com.newrelic.agent.android:android-agent:2.426.0'
     compile 'com.google.android.gms:play-services:3.1.36'
     compile 'com.squareup:otto:1.3.4'
     compile 'com.jakewharton:butterknife:2.0.1'
