--- a/StiriDinRomania/build.gradle
+++ b/StiriDinRomania/build.gradle
@@ -13,7 +13,7 @@ repositories {
     mavenCentral()
 }
 apply plugin: 'android'
-apply plugin: 'android'
+apply plugin: 'newrelic'
 
 dependencies {
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
