--- a/StiriDinRomania/src/main/AndroidManifest.xml
+++ b/StiriDinRomania/src/main/AndroidManifest.xml
@@ -1,85 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.vladstoick.stiridinromania"
-          android:versionCode="1"
-          android:versionName="1.0">
+    package="com.vladstoick.stiridinromania"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <permission android:name="com.vladstoick.stiridinromania.gcm.permission.C2D_MESSAGE"
-                android:protectionLevel="signature" />
-    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
-    <uses-sdk
-            android:minSdkVersion="10"
-            android:targetSdkVersion="18"/>
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <permission
+        android:name="com.vladstoick.stiridinromania.gcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
+
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-            android:name="com.vladstoick.stiridinromania.StiriApp"
-            android:allowBackup="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Styled">
-        <receiver
-                android:name=".GCMBroadcastReciever"
-                android:permission="com.google.android.c2dm.permission.SEND" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="com.example.gcm" />
-            </intent-filter>
-        </receiver>
-        <service android:name=".GCMIntentService" />
-        <meta-data
-                android:name="com.facebook.sdk.ApplicationId"
-                android:value="@string/app_id"/>
-        <activity android:name="com.facebook.LoginActivity"/>
-        <activity android:name="com.vladstoick.stiridinromania.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+        android:name="com.vladstoick.stiridinromania.StiriApp"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Styled" >
+        <activity
+            android:name="com.vladstoick.stiridinromania.SearchableActivity"
+            android:label="@string/search" >
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"
+                android:value=".SearchableActivity" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity android:name="com.facebook.LoginActivity" />
+        <activity android:name="com.vladstoick.stiridinromania.LoginActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                android:name="com.vladstoick.stiridinromania.NewsGroupListActivity"
-                android:launchMode="singleTop">
+            android:name="com.vladstoick.stiridinromania.NewsGroupListActivity"
+            android:launchMode="singleTop" >
         </activity>
         <activity
-                android:name="com.vladstoick.stiridinromania.NewsGroupDetailActivity"
-                android:launchMode="singleTop"
-                android:parentActivityName=".NewsGroupListActivity">
+            android:name="com.vladstoick.stiridinromania.NewsGroupDetailActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".NewsGroupListActivity" >
             <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".NewsGroupListActivity"/>
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".NewsGroupListActivity" />
         </activity>
         <activity
-                android:name="com.vladstoick.stiridinromania.NewsItemListActivity"
-                android:launchMode="singleTop"
-                android:parentActivityName=".NewsGroupActivity">
+            android:name="com.vladstoick.stiridinromania.NewsItemListActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".NewsGroupDetailActivity" >
             <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".NewsGroupActivity"/>
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".NewsGroupDetailActivity" />
         </activity>
         <activity
-                android:name="com.vladstoick.stiridinromania.NewsItemDetailActivity"
-                android:launchMode="singleTop"
-                android:parentActivityName=".NewsItemListActivity">
+            android:name="com.vladstoick.stiridinromania.NewsItemDetailActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".NewsItemListActivity" >
             <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".NewsItemListActivity"/>
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".NewsItemListActivity" />
         </activity>
         <activity
-                android:name=".AddElementAcitvitiy"
-                android:windowSoftInputMode="adjustResize"
-                android:label="@string/add_element_fragment_title"
-                android:parentActivityName="NewsGroupListActivity"
-                android:uiOptions="splitActionBarWhenNarrow">
-            <meta-data
-                    android:name="android.support.UI_OPTIONS"
-                    android:value="splitActionBarWhenNarrow"/>
+            android:name="com.vladstoick.stiridinromania.AddElementAcitvitiy"
+            android:label="@string/add_element_fragment_title"
+            android:parentActivityName="NewsGroupListActivity"
+            android:windowSoftInputMode="adjustResize" >
+        </activity>
+
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value=".SearchableActivity" />
+
+        <activity
+            android:name="com.vladstoick.stiridinromania.SearchResultsActivity"
+            android:label="@string/title_activity_search_results" >
         </activity>
     </application>
 
