--- a/StiriDinRomania/src/main/AndroidManifest.xml
+++ b/StiriDinRomania/src/main/AndroidManifest.xml
@@ -27,22 +27,26 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Styled" >
+        <activity
+                android:name="com.vladstoick.stiridinromania.SearchResultsActivity"
+                android:label="@string/search"
+                android:launchMode="singleTop"
+                android:parentActivityName=".NewsGroupListActivity">
+            <meta-data
+                    android:name="android.app.searchable"
+                    android:resource="@xml/searchable"
+                    android:value=".SearchResultsActivity" />
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".NewsGroupListActivity" />
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>
         <activity android:name="com.vladstoick.stiridinromania.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.vladstoick.stiridinromania.SearchableActivity"
-            android:label="@string/search" >
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable"
-                android:value=".SearchableActivity" />
-
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
 
@@ -92,12 +96,9 @@
 
         <meta-data
             android:name="android.app.default_searchable"
-            android:value=".SearchableActivity" />
+            android:value=".SearchResultsActivity" />
 
-        <activity
-            android:name="com.vladstoick.stiridinromania.SearchResultsActivity"
-            android:label="@string/title_activity_search_results" >
-        </activity>
+
     </application>
 
 </manifest>
